Changed from linkedlist to arraylist